--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <audio id="player" controls>
-  <source src="musicas/Padre_Zezinho__scj_-_Sant_ssima_Trindade_25032023115139_m4a-_130-kbps_.mp3" type="audio/mp3">
+  <source src="" type="audio/mp3">
 </audio>
 <ul id="playlist"></ul>
 <script src="js/scripts.js"></script>
